# codedna

./: .codedna  .flake8  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  QUICKSTART.md  README-it.md  README.md  SECURITY.md  SPEC.md  codedna-wiki.md  nlnet_application_draft.md  nlnet_application_draft_en_1.md  nlnet_application_draft_it.md  note_dev  pyproject.toml
.claude-plugin/: marketplace.json
.claude/agents/: codedna-protocol-enforcer.md  codedna-wiki-keeper.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/codeql/: codeql-config.yml
.github/workflows/: ci.yml  codeql.yml  lint.yml
benchmark/: beacon_benchmark.py  codedna_benchmark.py  index.html  note  results.json  results_v2.json
benchmark_agent/: BENCHMARK_NOTES.md  agent.py  analyze_claude_code_test.py  benchmark_server.py  benchmark_ui.html  dashboard.html  fix_annotations.py  generate_codebase.py  generate_large_codebase.py  patch_annotations.py  patch_annotations_13495.py  patch_annotations_all.py  prompt_13495_codedna.md  prompt_13495_control.md  results_agent.json  results_enterprise.json  results_swebench.json  run_benchmark.py  run_enterprise.py  status.py  watch_jobs.py
benchmark_agent/enterprise/: arch.py  codegen.py  distractors.py  run.py
benchmark_agent/swebench/: analyze.py  analyze_multi.py  annotator.py  run_agent.py  run_agent_multi.py  select_tasks.py  setup_agent_annotated.py  setup_benchmark.py  setup_repos.py  tasks.json  tasks_multifile.json
codedna-plugin/: README.md  SUBMIT.md
codedna-plugin/.claude-plugin/: plugin.json
codedna-plugin/agents/: codedna-reviewer.md
codedna-plugin/commands/: check.md  impact.md  init.md  manifest.md
codedna-plugin/hooks/: hooks.json
codedna-plugin/scripts/: check-annotation.sh  pre-edit-check.sh  session-start.sh  session-stop.sh
codedna_tool/: __init__.py  cli.py  wiki.py
codedna_tool/languages/: __init__.py  _treesitter.py  _ts_csharp.py  _ts_go.py  base.py  (+20 more)
docs/: agent-tests.md  agent-visualizer.html  benchmark.md  codedna-wiki.md  codedna_building_3d.html  codedna_city.html  codedna_world.html  experiments.md  index.html  install.html  languages.md  privacy.html
experiments/: README.md  run_experiment.py  run_experiment_webapp.py  run_experiment_webapp2.py  run_frontend_designer.py
integrations/: .clinerules  .cursorrules  .windsurfrules  AGENTS.md  CLAUDE.md  README.md  copilot-instructions.md  install.sh
paper/: codedna_paper.html  codedna_paper.pdf.bak  codedna_paper_IT.html  codedna_paper_v0.9.html  codedna_paper_v0.9_IT.html  codedna_viz.html  codedna_whitepaper_EN.html  codedna_whitepaper_v0.9_EN.html
research_support/: README_IT.md  analyze_existing_runs.py  call_plan_it.md  consegna_pronta_it.md  methods_draft_en.md  results_template.csv  run_benchmark_team.ps1  windows_cp1252_issue_report.md
tests/: __init__.py  conftest.py  test_cli.py  test_integration_langs.py  test_language_adapters.py  test_refresh.py  test_validator.py  test_wiki.py
thesis/: run_benchmark.py  tasks.json
tools/: agent_history.py  auto_annotate.py  claude_hook_codedna.sh  claude_hook_stop.sh  codedna_annotate.py  codedna_setup.py  extract_city_data.py  install-hooks.sh  pre-commit  system-prompts.md  traces_to_training.py  validate_manifests.py
(+979 files in other folders)
