[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "codedna"
version = "1.1.0"
description = "CodeDNA v0.8 — in-source annotation protocol for AI agents"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
anthropic   = ["anthropic>=0.20"]
litellm     = ["litellm>=1.0"]
treesitter  = [
    "tree-sitter>=0.23",
    "tree-sitter-typescript>=0.23",
    "tree-sitter-go>=0.23",
]
all         = ["anthropic>=0.20", "litellm>=1.0", "tree-sitter>=0.23", "tree-sitter-typescript>=0.23", "tree-sitter-go>=0.23"]

[project.scripts]
codedna = "codedna_tool.cli:main"

[tool.setuptools.packages.find]
include = ["codedna_tool*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.black]
line-length = 120
target-version = ["py311"]
exclude = '''
/(
    \.git
  | \.venv
  | venv
  | __pycache__
  | benchmark
  | benchmark_agent
  | docs
)/
'''