[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "codedna"
version = "1.2.0"
description = "CodeDNA v0.9 — in-source annotation protocol for AI agents"
requires-python = ">=3.11"
dependencies = [
    "tree-sitter>=0.25",
    "tree-sitter-typescript>=0.23",
    "tree-sitter-go>=0.23",
    "tree-sitter-php>=0.24",
    "tree-sitter-java>=0.23",
    "tree-sitter-rust>=0.24",
    "tree-sitter-c-sharp>=0.23",
    "tree-sitter-ruby>=0.23",
    "tree-sitter-kotlin>=1.1",
]

[project.optional-dependencies]
anthropic  = ["anthropic>=0.20"]
litellm    = ["litellm>=1.0"]
treesitter = []  # kept for backward compat — tree-sitter is now a core dependency
all        = ["anthropic>=0.20", "litellm>=1.0"]
dev        = ["ruff>=0.4", "pytest>=8.0"]

[project.scripts]
codedna = "codedna_tool.cli:main"

[tool.setuptools.packages.find]
include = ["codedna_tool*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.ruff]
line-length = 120
target-version = "py311"
exclude = [".git", ".venv", "venv", "__pycache__", "benchmark", "benchmark_agent", "docs", "tests/fixtures"]

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501"]  # line length handled by formatter

[tool.black]
line-length = 120
target-version = ["py311"]
exclude = '''
/(
    \.git
  | \.venv
  | venv
  | __pycache__
  | benchmark
  | benchmark_agent
  | docs
)/
'''